feat: add comment reactions
